[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Themes/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/PressStart2P.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 520.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 520.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Bars" type="VBoxContainer" parent="Control/VBoxContainer/Top"]
margin_right = 170.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PV" type="Label" parent="Control/VBoxContainer/Top/Bars"]
margin_right = 170.0
margin_bottom = 14.0
text = "HP: 10"

[node name="Armor" type="Label" parent="Control/VBoxContainer/Top/Bars"]
margin_top = 18.0
margin_right = 170.0
margin_bottom = 32.0
text = "AR: 5"

[node name="Time" type="Label" parent="Control/VBoxContainer/Top"]
margin_left = 174.0
margin_right = 344.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "06:53"
align = 1

[node name="Golds" type="HBoxContainer" parent="Control/VBoxContainer/Top"]
margin_left = 348.0
margin_right = 520.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Gold" type="Label" parent="Control/VBoxContainer/Top/Golds"]
margin_left = 60.0
margin_right = 172.0
margin_bottom = 14.0
size_flags_horizontal = 10
size_flags_vertical = 2
text = "Gold: 12"
align = 2

[node name="Down" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 252.0
margin_right = 520.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="Level" type="Label" parent="Control/VBoxContainer/Down"]
margin_top = 7.0
margin_right = 42.0
margin_bottom = 21.0
text = "1-1"

[node name="WeaponsNames" type="VBoxContainer" parent="Control/VBoxContainer/Down"]
margin_left = 422.0
margin_right = 520.0
margin_bottom = 28.0
size_flags_horizontal = 10

[node name="Weapon1" type="Label" parent="Control/VBoxContainer/Down/WeaponsNames"]
margin_right = 98.0
margin_bottom = 14.0
text = "Weapon1"

[node name="Weapon2" type="Label" parent="Control/VBoxContainer/Down/WeaponsNames"]
margin_top = 18.0
margin_right = 98.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Weapon1"
align = 2
